[gd_scene load_steps=6 format=2]

[ext_resource path="res://scripts/ui/menus/main_menu.gd" type="Script" id=1]
[ext_resource path="res://scenes/ui/menus/title_menu.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/ui/menus/level_select_menu.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/ui/menus/settings_menu.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/ui/menus/credits_menu.tscn" type="PackedScene" id=5]

[node name="main_menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="title_menu" parent="." instance=ExtResource( 2 )]

[node name="level_select_menu" parent="." instance=ExtResource( 3 )]
visible = false

[node name="settings_menu" parent="." instance=ExtResource( 4 )]
visible = false

[node name="credits_menu" parent="." instance=ExtResource( 5 )]
visible = false
